force-app/main/default/objects/ElixirSuite__Master_Transaction__c/fields/Elixir_Error_Description__c.field-meta.xml
<CustomField>
    <fullName>Elixir_Error_Description__c</fullName>
    <description>Field to store the Authorize.Net Error in Payment Callout.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Error Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>