force-app/main/default/objects/ElixirSuite__Master_Transaction__c/fields/Elixir_External_Transaction_ID__c.field-meta.xml
<CustomField>
    <fullName>Elixir_External_Transaction_ID__c</fullName>
    <description>Field to store the Authorize.Net Transaction Id for Payment.</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>External Transaction ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>