force-app/main/default/objects/ElixirSuite__Master_Transaction__c/fields/Elixir_Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Elixir_Payment_Status__c</fullName>
    <description>Field to store the Authorize.Net Payment Status.</description>
    <label>Payment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Successful</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Voided</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>