force-app/main/default/objects/ElixirSuite__Master_Transaction__c/fields/Elixir_Unique_Transaction_Key__c.field-meta.xml
<CustomField>
    <fullName>Elixir_Unique_Transaction_Key__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>System Generated Unique Key for Transaction</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Unique Transaction Key</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>